# hdb_resale_prices

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
data/cleaned/: hdb_resale_cleaned.parquet
data/failed/: duplicate_lower_price.csv  identifier_collision_duplicates.csv  lease_expired.csv  validation_failures.csv
data/reports/: price_anomalies_flagged.csv
notebook/: hdb_etl.ipynb
part2_design_pattern/: design-summary.md
src/: __init__.py  clean.py  combine.py  config.py  ingest.py  profile.py  transform.py  validate.py
tests/: test_clean.py  test_profile.py  test_transform.py  test_validate.py
