[project]
name = "hdb-resale-etl"
version = "0.1.0"
description = "HDB Resale Flat Prices ETL Pipeline (Part 1)"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "requests>=2.31",
    "pyarrow>=14.0",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
