[project]
name = "hdb-resale-etl"
version = "0.1.0"
description = "HDB Resale Flat Prices ETL Pipeline (Part 1)"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pandas>=2.0,<4",
    "requests>=2.31,<3",
    "pyarrow>=14.0,<24",
    "jupyter>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=7.0,<9"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
# Ensure the project root is on sys.path so `import src.*` works regardless
# of whether pytest is invoked as `pytest`, `python -m pytest`, or from an
# editor that shells out without activating the venv.
pythonpath = ["."]
testpaths = ["tests"]
